@@ -5,37 +5,37 @@
     
     
       
-      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000223">
+      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000433">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="8.384246">
+      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="8.64868">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="3.302499">
+      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="3.522417">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="3: puro flutter build apk --target-platform=android-arm64" time="52.851873">
+      <testcase classname="fastlane.lanes" name="3: puro flutter build apk --target-platform=android-arm64" time="71.48147">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="4: mv ../../build/app/outputs/flutter-apk/app-release.apk ../../build/app/outputs/flutter-apk/promaja.apk" time="0.005991">
+      <testcase classname="fastlane.lanes" name="4: mv ../../build/app/outputs/flutter-apk/app-release.apk ../../build/app/outputs/flutter-apk/promaja.apk" time="0.006366">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="5: set_github_release" time="15.936316">
+      <testcase classname="fastlane.lanes" name="5: set_github_release" time="17.763733">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="6: notification" time="0.612079">
+      <testcase classname="fastlane.lanes" name="6: notification" time="0.384456">
         
       </testcase>
     
